--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
       </tr>
       </tbody>
       <script src="https://d3js.org/d3.v5.min.js"></script>
-      <script src="mm.json"></script>
+      <script src="drugTesting.json"></script>
       <script src="t.js"></script>
       </body>
       </html>
